Fix title cut-off on mobile for full-width articles with banner-image

--- a/ubyssey/static/src/styles/modules/article/_full_width.scss
+++ b/ubyssey/static/src/styles/modules/article/_full_width.scss
@@ -128,7 +128,7 @@
       }
       .headline-container {
         position: absolute;
-        bottom: 0;
+        bottom: auto;
         padding: 70px 0 2rem 0;
         background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 1%, rgba(0,0,0,0.84) 99%);
         h1.headline, p.fw-description, div.article-byline, span.author, span.published {
